--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,27 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "laravel/framework": "^11.9",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "php": "8.2",
+        "laravel/framework": "11.9",
+        "laravel/sanctum": "4.0",
+        "laravel/tinker": "2.9",
+        "mercadopago/dx-php": "3.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.23",
-        "laravel/breeze": "^2.2",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
-        "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
-        "pestphp/pest": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "fakerphp/faker": "1.23",
+        "laravel/breeze": "2.2",
+        "laravel/pint": "1.13",
+        "laravel/sail": "1.26",
+        "mockery/mockery": "1.6",
+        "nunomaduro/collision": "8.0",
+        "pestphp/pest": "3.0",
+        "pestphp/pest-plugin-laravel": "3.0"
     },
     "autoload": {
         "psr-4": {
